syntax = "proto3";

package lost_dutchman;

service Conductor {
  rpc GetNextPageToCrawl(NextPageRequest) returns (NextPageResponse) {}
  rpc ReportCrawlOutcome(CrawlOutcome) returns (CrawlOutcomeResponse) {}
}

message NextPageRequest {
  string current_host = 1;
}

message NextPageResponse {
  string next_page_url = 1;
}

message CrawlOutcome {
  string url = 1;
  string content_type = 2;
  int32 content_length = 3;
  string last_modified = 4;
  string etag = 5;
  int32 code = 6;
}

message CrawlOutcomeResponse {
  string message = 1;
}